[package]
name = "tiervium"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.5.8"
anyhow = "1.0.52"
chrono = "0.4.19"
reqwest = "0.11.8"
futures = "0.3.19"
serde_json = "1.0.74"

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies.mongodb]
version = "2.1.0"
features = ["bson-uuid-0_8", "bson-chrono-0_4"]

[dependencies.tokio]
version = "1.15.0"
features = ["fs", "time", "macros", "rt-multi-thread"]
