[package]
name = "tiervium"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.5.8"
anyhow = "1.0.52"
chrono = "0.4.19"
reqwest = "0.11.8"
futures = "0.3.19"
serde_json = "1.0.74"

[dependencies.sqlx]
version = "0.5.10"
features = ["mysql", "chrono", "runtime-tokio-rustls"]

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies.tokio]
version = "1.15.0"
features = ["fs", "time", "macros", "rt-multi-thread"]
