[package]
name = "tiervium"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
toml = "0.5.8"
anyhow = "1.0.52"
chrono = "0.4.19"
reqwest = "0.11.8"
futures = "0.3.19"
env_logger = "0.9.0"
serde_json = "1.0.74"

[dependencies.sqlx]
version = "0.5.10"
features = ["mysql", "chrono", "migrate", "runtime-tokio-rustls"]

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies.tokio]
version = "1.15.0"
features = ["fs", "time", "macros", "rt-multi-thread"]
